Fix bug #101828.  Sending more than one piece of unsent mail fails when posting to sent mail folder.  This patch serializes the posting to the sent mail folder so that we don't try to post more than one message at a time. r=naving,sr=bienvenu