mailnews/compose/src/nsMsgSendLater.h
@@ -59,7 +59,8 @@
 class nsMsgSendLater;
 class nsMsgDeliveryListener;
 
-class SendOperationListener : public nsIMsgSendListener
+class SendOperationListener : public nsIMsgSendListener,
+                              public nsIMsgCopyServiceListener
 {
 public:
   SendOperationListener(void);
@@ -70,6 +71,9 @@ public:
 
   // nsIMsgSendListener interface
   NS_DECL_NSIMSGSENDLISTENER
+
+  // nsIMsgCopyServiceListener interface
+  NS_DECL_NSIMSGCOPYSERVICELISTENER
     
   NS_IMETHOD SetSendLaterObject(nsMsgSendLater *obj);
 private:
